--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/node": "^9.4.7",
         "@types/vue": "^2.0.0",
         "babel-core": "^6.26.0",
+        "babel-jest": "^23.0.0-alpha.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.0",
         "babel-preset-stage-3": "^6.24.1",
@@ -31,6 +32,7 @@
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.4",
         "jest": "^22.4.2",
+        "regenerator-runtime": "^0.11.1",
         "vue-loader": "^13.0.5",
         "vue-template-compiler": "^2.4.4",
         "wallaby-vue-compiler": "^1.0.2",
