--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "file-loader": "^1.1.4",
         "jest": "^22.4.2",
         "regenerator-runtime": "^0.11.1",
+        "vue-jest": "^2.1.1",
         "vue-loader": "^13.0.5",
         "vue-template-compiler": "^2.4.4",
         "wallaby-vue-compiler": "^1.0.2",
